--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -17,6 +17,7 @@
     DEBCONF_NONINTERACTIVE_SEEN: 'true'
   command: dpkg-reconfigure --frontend=noninteractive ca-certificates
   notify: [ 'Install ca-certificates.crt into Postfix chroot' ]
+  when: pki_is_debian
 
 - name: Install ca-certificates.crt into Postfix chroot
   shell: test -d /var/spool/postfix &&
