--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,6 +27,10 @@ galaxy_info:
         - saucy
         - trusty
 
+    - name: CentOS
+      versions:
+        - 7
+
   galaxy_tags:
     - encryption
     - hardening
@@ -36,4 +40,3 @@ galaxy_info:
     - tls
     - acme
     - letsencrypt
-
